--- a/notebooks/05_Non-linearities_and_regularisation.ipynb
+++ b/notebooks/05_Non-linearities_and_regularisation.ipynb
@@ -342,7 +342,7 @@
     "    \"\"\"Plots a normalised histogram of an array of parameter values.\"\"\"\n",
     "    fig = plt.figure(figsize=fig_size)\n",
     "    ax = fig.add_subplot(111)\n",
-    "    ax.hist(param.flatten(), 50, interval, normed=True)\n",
+    "    ax.hist(param.flatten(), 50, interval, density=True)\n",
     "    ax.set_xlabel('Parameter value')\n",
     "    ax.set_ylabel('Normalised frequency density')\n",
     "    return fig, ax\n",
