--- a/notebooks/08_Convolutional_Layers.ipynb
+++ b/notebooks/08_Convolutional_Layers.ipynb
@@ -535,6 +535,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can vary the kernel size, number of epochs and batch size while training your model below. This will give a good analysis into how the network parameters and hyper-parameters affect the CNN training. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
