add experiment script for 08 w bn each layer

--- a/notebooks/Plot_Results.ipynb
+++ b/notebooks/Plot_Results.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +91,8 @@
     "\n",
     "def plot_result_graphs(plot_name, stats, keys_to_plot, notebook=True):\n",
     "    \n",
+    "    stats_dict = {}\n",
+    "    \n",
     "    fig_1 = plt.figure(figsize=(8, 4))\n",
     "    ax_1 = fig_1.add_subplot(111)\n",
     "    for name in keys_to_plot:\n",
@@ -98,6 +100,7 @@
     "            item = stats[name][k]\n",
     "            ax_1.plot(np.arange(0, len(item)), \n",
     "                      item, label='{}_{}'.format(name, k))\n",
+    "            stats_dict[\"{}_{}\".format(name, k)]  = np.min(item)\n",
     "            \n",
     "    ax_1.legend(loc=0)\n",
     "    ax_1.set_ylabel('Loss')\n",
@@ -111,6 +114,8 @@
     "            item = stats[name][k]\n",
     "            ax_2.plot(np.arange(0, len(item)), \n",
     "                      item, label='{}_{}'.format(name, k))\n",
+    "            \n",
+    "            stats_dict[\"{}_{}\".format(name, k)] = np.max(item)\n",
     "            \n",
     "    ax_2.legend(loc=0)\n",
     "    ax_2.set_ylabel('Accuracy')\n",
@@ -126,12 +131,14 @@
     "        transparent=False, bbox_inches=None, pad_inches=0.1,\n",
     "        frameon=None, metadata=None)\n",
     "    \n",
+    "    return stats_dict\n",
+    "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -140,13 +147,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-4-24846fc73689>:32: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"papertype\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "<ipython-input-21-7dc307fcd91a>:37: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"papertype\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
       "  fig_1.savefig('../results/{}_loss_performance.pdf'.format(plot_name), dpi=None, facecolor='w', edgecolor='w',\n",
-      "<ipython-input-4-24846fc73689>:32: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"frameon\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "<ipython-input-21-7dc307fcd91a>:37: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"frameon\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
       "  fig_1.savefig('../results/{}_loss_performance.pdf'.format(plot_name), dpi=None, facecolor='w', edgecolor='w',\n",
-      "<ipython-input-4-24846fc73689>:37: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"papertype\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "<ipython-input-21-7dc307fcd91a>:42: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"papertype\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
       "  fig_2.savefig('../results/{}_accuracy_performance.pdf'.format(plot_name), dpi=None, facecolor='w', edgecolor='w',\n",
-      "<ipython-input-4-24846fc73689>:37: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"frameon\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "<ipython-input-21-7dc307fcd91a>:42: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"frameon\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
       "  fig_2.savefig('../results/{}_accuracy_performance.pdf'.format(plot_name), dpi=None, facecolor='w', edgecolor='w',\n"
      ]
     },
@@ -172,53 +179,52 @@
     }
    ],
    "source": [
-    "plot_result_graphs('problem_model', result_dict, keys_to_plot=['VGG_38', 'VGG_08'])"
+    "stats = plot_result_graphs('problem_model', result_dict, keys_to_plot=['VGG_38', 'VGG_08'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "plot_result_graphs('08_vs_38_bn_block', result_dict, keys_to_plot=['VGG_38_BN_experiment', 'VGG_08_BN_experiment'])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'VGG_38_train_loss': 4.6051517,\n",
+       " 'VGG_38_val_loss': 4.60659,\n",
+       " 'VGG_08_train_loss': 1.6030664,\n",
+       " 'VGG_08_val_loss': 1.9604725,\n",
+       " 'VGG_38_train_acc': 0.010252631578947369,\n",
+       " 'VGG_38_val_acc': 0.011600000000000001,\n",
+       " 'VGG_08_train_acc': 0.552442105263158,\n",
+       " 'VGG_08_val_acc': 0.49079999999999996}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   }
+   ],
+   "source": [
+    "stats"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "plot_result_graphs('bn_block_vs_bn_layer', result_dict, keys_to_plot=['VGG_38_BN_experiment', 'VGG_38_BN_each_layer_experiment'])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-4-24846fc73689>:32: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"papertype\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "<ipython-input-21-7dc307fcd91a>:37: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"papertype\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
       "  fig_1.savefig('../results/{}_loss_performance.pdf'.format(plot_name), dpi=None, facecolor='w', edgecolor='w',\n",
-      "<ipython-input-4-24846fc73689>:32: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"frameon\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "<ipython-input-21-7dc307fcd91a>:37: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"frameon\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
       "  fig_1.savefig('../results/{}_loss_performance.pdf'.format(plot_name), dpi=None, facecolor='w', edgecolor='w',\n",
-      "<ipython-input-4-24846fc73689>:37: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"papertype\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "<ipython-input-21-7dc307fcd91a>:42: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"papertype\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
       "  fig_2.savefig('../results/{}_accuracy_performance.pdf'.format(plot_name), dpi=None, facecolor='w', edgecolor='w',\n",
-      "<ipython-input-4-24846fc73689>:37: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"frameon\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "<ipython-input-21-7dc307fcd91a>:42: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"frameon\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
       "  fig_2.savefig('../results/{}_accuracy_performance.pdf'.format(plot_name), dpi=None, facecolor='w', edgecolor='w',\n"
      ]
     },
@@ -243,24 +249,53 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "stats = plot_result_graphs('08_vs_38_bn_block', result_dict, keys_to_plot=['VGG_38_BN_experiment', 'VGG_08_BN_experiment'])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'VGG_38_BN_experiment_train_loss': 1.7605983,\n",
+       " 'VGG_38_BN_experiment_val_loss': 2.0897126,\n",
+       " 'VGG_08_BN_experiment_train_loss': 1.3950516,\n",
+       " 'VGG_08_BN_experiment_val_loss': 1.7074723,\n",
+       " 'VGG_38_BN_experiment_train_acc': 0.5085052631578948,\n",
+       " 'VGG_38_BN_experiment_val_acc': 0.43479999999999996,\n",
+       " 'VGG_08_BN_experiment_train_acc': 0.6029684210526316,\n",
+       " 'VGG_08_BN_experiment_val_acc': 0.55}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-4-24846fc73689>:32: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"papertype\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "<ipython-input-21-7dc307fcd91a>:37: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"papertype\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
       "  fig_1.savefig('../results/{}_loss_performance.pdf'.format(plot_name), dpi=None, facecolor='w', edgecolor='w',\n",
-      "<ipython-input-4-24846fc73689>:32: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"frameon\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "<ipython-input-21-7dc307fcd91a>:37: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"frameon\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
       "  fig_1.savefig('../results/{}_loss_performance.pdf'.format(plot_name), dpi=None, facecolor='w', edgecolor='w',\n",
-      "<ipython-input-4-24846fc73689>:37: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"papertype\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "<ipython-input-21-7dc307fcd91a>:42: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"papertype\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
       "  fig_2.savefig('../results/{}_accuracy_performance.pdf'.format(plot_name), dpi=None, facecolor='w', edgecolor='w',\n",
-      "<ipython-input-4-24846fc73689>:37: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"frameon\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
+      "<ipython-input-21-7dc307fcd91a>:42: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"frameon\" which is no longer supported as of 3.3 and will become an error two minor releases later\n",
       "  fig_2.savefig('../results/{}_accuracy_performance.pdf'.format(plot_name), dpi=None, facecolor='w', edgecolor='w',\n"
      ]
     },
@@ -286,7 +321,34 @@
     }
    ],
    "source": [
-    "plot_result_graphs('bn_block_vs_bn_layer', result_dict, keys_to_plot=['VGG_38_BN_experiment', 'VGG_38_BN_each_layer_experiment'])"
+    "stats = plot_result_graphs('bn_block_vs_bn_layer', result_dict, keys_to_plot=['VGG_38_BN_experiment', 'VGG_38_BN_each_layer_experiment'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'VGG_38_BN_experiment_train_loss': 1.7605983,\n",
+       " 'VGG_38_BN_experiment_val_loss': 2.0897126,\n",
+       " 'VGG_38_BN_each_layer_experiment_train_loss': 1.5687203,\n",
+       " 'VGG_38_BN_each_layer_experiment_val_loss': 1.9242086,\n",
+       " 'VGG_38_BN_experiment_train_acc': 0.5085052631578948,\n",
+       " 'VGG_38_BN_experiment_val_acc': 0.43479999999999996,\n",
+       " 'VGG_38_BN_each_layer_experiment_train_acc': 0.5566315789473685,\n",
+       " 'VGG_38_BN_each_layer_experiment_val_acc': 0.48239999999999994}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats"
    ]
   },
   {
@@ -294,7 +356,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train (47500, 32, 32, 3)\n",
+    "train (47500,)\n",
+    "Files already downloaded and verified\n",
+    "val (2500, 32, 32, 3)\n",
+    "val (2500,)\n",
+    "Files already downloaded and verified\n",
+    "test (10000, 32, 32, 3)\n",
+    "test (10000,)"
+   ]
   }
  ],
  "metadata": {
